[workspace]
members = [
  "deferred-rate-limiter",
  "entities",
  "latency",
  "migration",
  "quick_cache_ttl",
  "rate-counter",
  "redis-rate-limiter",
  "thread-fast-rng",
  "web3_proxy",
]

[profile.release]
# `debug = true` so that sentry can give us line numbers
debug = true

[profile.faster_release]
inherits = "release"

# spend longer compiling for a slightly faster binary
codegen-units = 1
