[workspace]
members = [
  "deferred-rate-limiter",
  "entities",
  "latency",
  "migration",
  "payment-contracts",
  "rate-counter",
  "redis-rate-limiter",
  "web3_proxy",
]
resolver = "2"

[profile.release]
# `debug = true` so that sentry can give us line numbers
debug = true

[profile.faster_release]
inherits = "release"

# spend longer compiling for a slightly faster binary
codegen-units = 1
 