[workspace]
members = [
  "deduped_broadcast",
  "deferred-rate-limiter",
  "entities",
  "latency",
  "migration",
  "payment-contracts",
  "rate-counter",
  "redis-rate-limiter",
  "web3_proxy",
  "web3_proxy_cli",
]
resolver = "2"

[profile.release]
# `debug = true` so that sentry can give us line numbers
debug = true

[profile.faster_release]
inherits = "release"

# spend longer compiling for a faster binary
codegen-units = 1
# `link time optimization = true = fat`
lto = true
