[package]
name = "deduped_broadcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
moka = { version = "0.12.0", default-features = false, features = ["atomic64", "future", "quanta"] }
serde = "1"
tokio = { version = "1.32.0", features = ["full"] }
