[package]
name = "deduped_broadcast"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moka = { version = "0.12.1", features = ["future"] }
serde = "1"
tokio = { version = "1.34.0", features = ["full"] }
