[package]
name = "deferred-rate-limiter"
version = "0.2.0"
authors = ["Bryan Stitt <bryan@stitthappens.com>"]
edition = "2021"

[dependencies]
quick_cache_ttl = { path = "../quick_cache_ttl" }
redis-rate-limiter = { path = "../redis-rate-limiter" }

anyhow = "1.0.71"
hashbrown = "0.13.2"
log = "0.4.18"
tokio = "1.28.2"
