[package]
name = "deferred-rate-limiter"
version = "0.2.0"
authors = ["Bryan Stitt <bryan@llamanodes.com>"]
edition = "2021"

[dependencies]
redis-rate-limiter = { path = "../redis-rate-limiter" }

anyhow = "1.0.75"
hashbrown = "0.14.1"
log = "0.4.20"
moka = { version = "0.12.1", features = ["future"] }
tokio = "1.33.0"
tracing = "0.1.37"
