[package]
name = "entities"
version = "0.42.0"
edition = "2021"

[lib]
name = "entities"
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.9", default-features = false }
sea-orm = "0.12.2"
serde = "1.0.186"
ulid = "1.0.0"
