[package]
name = "entities"
version = "0.43.0"
edition = "2021"

[lib]
name = "entities"
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.11", default-features = false }
sea-orm = "0.12.8"
serde = "1.0.193"
ulid = "1.1.0"
