[package]
name = "latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
portable-atomic = { version = "1.3.3", features = ["float"] }
serde = { version = "1.0.171", features = [] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
watermill = "0.1.1"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full", "test-util"] }
