[package]
name = "latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
portable-atomic = { version = "1.5.0", features = ["float"] }
serde = { version = "1.0.189", features = [] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
watermill = "0.1.1"

[dev-dependencies]
tokio = { version = "1.33.0", features = ["full", "test-util"] }
