[package]
name = "linkedhashmap"
version = "0.2.0"
authors = ["quininer <quininer@live.com>"]
edition = "2018"

[features]
inline-more = [ "hashbrown" ]

[dependencies]
slab = "0.4.7"
hashbrown = { version = "0.12.3", optional = true }

[dev-dependencies]
criterion = "0.3.6"
hashlink = "0.8.0"
linked-hash-map = "0.5.6"

[[bench]]
name = "lru"
harness = false
