[package]
name = "migration"
version = "0.32.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.28.2", features = ["full", "tracing"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dependencies.sea-orm-migration]
version = "0.11.3"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  "sqlx-mysql",            # `DATABASE_DRIVER` feature
]
