[package]
name = "payment-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ethers = { version = "2.0.7", default-features = false }
glob = "0.3.1"

[dependencies]
ethers = { version = "2.0.7", default-features = false }
