[package]
name = "quick_cache_ttl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.18"
quick_cache = "0.3.0"
serde = "1"
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full", "test-util"] }
