[package]
name = "web3-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.12", features = ["serde_json"] }
diesel = { version = "1.4.8", features = ["mysql"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full", "tracing"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
