[package]
name = "web3_proxy_cli"
version = "1.43.84"
edition = "2021"
default-run = "web3_proxy_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tokio-console"]

deadlock_detection = ["parking_lot/deadlock_detection"]
mimalloc = ["web3_proxy/mimalloc"]
stripe = ["web3_proxy/stripe"]
rdkafka-src = ["web3_proxy/rdkafka-src"]
tests-needing-docker = ["web3_proxy/tests-needing-docker"]
tokio-console = ["dep:tokio-console", "dep:console-subscriber"]

[dependencies]
web3_proxy = { path = "../web3_proxy" }

console-subscriber = { version = "0.2.0", features = ["env-filter", "parking_lot"], optional = true }
parking_lot = { version = "0.12.1", features = ["arc_lock", "nightly"] }
prettytable = { version = "0.10.0", default-features = false }
serde = { version = "1.0.191" }
serde_json = { version = "1.0.108", default-features = false, features = ["raw_value"] }
tokio-console = { version = "0.1.10", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
env_logger = { version ="0.10", default-features = false, features = ["auto-color"] }
test-log = { version ="0.2.13", default-features = false, features = ["trace"] }
